syntax = "proto3";
package order;
option go_package = "github.com/zenpk/dorm-system/internal/service/order";

import "common.proto";

service Order{
  rpc Submit (OrderRequest) returns(OrderReply){}
}

message OrderRequest{
  string buildingNum = 1;
  uint64 teamId = 2;
}

message OrderReply{
  common.CommonResponse resp = 1;
}
